--- a/src/styles/components/_app-select.scss
+++ b/src/styles/components/_app-select.scss
@@ -12,6 +12,13 @@
       color: white;
     }
   }
+  .css-1pahdxg-control {
+    border-color: white;
+    box-shadow: none;
+    &:hover {
+      border-color: white;
+    }
+  }
   .css-1okebmr-indicatorSeparator {
     display: none;
   }
