--- a/src/styles/configs/_chakra-custom.scss
+++ b/src/styles/configs/_chakra-custom.scss
@@ -67,3 +67,12 @@
   ) !important;
   @include blurBack(20px);
 }
+
+.chakra-input,
+.chakra-button,
+.chakra-modal__close-btn {
+  &:focus {
+    box-shadow: none !important;
+    border-color: white !important;
+  }
+}
