feat : activities tab

--- a/src/styles/components/_ranking-list.scss
+++ b/src/styles/components/_ranking-list.scss
@@ -14,5 +14,21 @@
   }
   .chakra-table{
     margin-top: 38px;
+    tbody{
+      tr{
+        .collection {
+          display: flex;
+          align-items: center;
+          img{
+            width: 56px;
+            height: 56px;
+          }
+          span{
+            margin-left: 10px;
+            white-space: nowrap;
+          }
+        }
+      }
+    }
   }
 }
