--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -55,6 +55,7 @@
       margin: auto;
       margin-bottom: 56px;
       button {
+        transition: all 1s;
         width: 20%;
         font-weight: 500;
         font-size: 24px;
@@ -103,62 +104,40 @@
           justify-items: flex-end;
         }
       }
-      .offering-auction {
-        .list {
-          margin-top: 35px;
-          display: grid;
-          grid-template-columns: repeat(5, 1fr);
-          grid-row-gap: 20px;
-          grid-column-gap: 24px;
-        }
+    }
+    .offering-auction {
+      .list {
+        margin-top: 35px;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-row-gap: 20px;
+        grid-column-gap: 24px;
       }
-      .offering-make {
-        .list {
-          margin-top: 40px;
-          border-radius: 10px;
-          border: 1px solid #d7d7d7;
-          background: linear-gradient(
-            126.08deg,
-            rgba(255, 255, 255, 0.3) 13.84%,
-            rgba(255, 255, 255, 0.1) 74.14%
-          );
-          box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.2);
-          backdrop-filter: blur(40px);
-          width: 100%;
-          .row {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            .title.item {
-              grid-column: 1 / span 2;
-              padding-left: 33px;
-            }
-            .title.price {
-              padding-right: 30%;
-            }
-            .title {
-              padding-top: 32px;
-              padding-bottom: 28px;
-              font-size: 18px;
-              font-weight: 600;
-              line-height: 29px;
-            }
-            .row-item.item {
-              grid-column: 1 / span 2;
-              padding-left: 33px;
-            }
-            .row-item.price {
-              padding-right: 30%;
-            }
-            .row-item {
-              padding-top: 13px;
-              border-top: 1px solid #d7d7d7;
-              padding-bottom: 16px;
-              button {
-                display: flex;
-                width: 100%;
-              }
+    }
+    .offering-make {
+      margin-top: 40px;
+      .item{
+        display: flex;
+        align-items: center;
+        img{
+          width: 50px;
+          margin-right: 17px;
+        }
+        div{
+          p{
+            img{
+              display: inline-block;
+              width: 10px;
+              margin-left: 7px;
             }
           }
+        }
+      }
+      .button {
+        button {
+          border: 1px solid linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+          padding: 3px 25px;
+          border-radius: 8px;
         }
       }
     }
@@ -171,20 +150,21 @@
           display: block;
         }
         .group-search {
-          border: 1px solid #D7D7D7;
+          border: 1px solid #d7d7d7;
           box-sizing: border-box;
           border-radius: 8px;
           margin-right: 22px;
-          width:300px;
+          width: 300px;
           @include to(sm) {
-            width:100%;
+            width: 100%;
             margin-bottom: 10px;
           }
           input {
             border: 0px;
           }
         }
-        .price-sort, .type-sort {
+        .price-sort,
+        .type-sort {
           @include to(sm) {
             width: 100%;
             margin-bottom: 10px;
@@ -200,6 +180,38 @@
             }
           }
         }
+      }
+    }
+    .tab-activities {
+      margin-top: 40px;
+      tbody {
+        tr {
+          .date {
+            img {
+              display: inline-block;
+              margin-left: 8px;
+              vertical-align: middle;
+              cursor: pointer;
+            }
+          }
+          .item {
+            img {
+              display: inline-block;
+              padding: 6x 13px;
+              background: rgba(125, 117, 208, 0.5);
+              border-radius: 8px;
+              margin-right: 17px;
+              vertical-align: middle;
+            }
+          }
+        }
+      }
+      .nodata {
+        margin: auto;
+        margin-top: 70px;
+        width: 50%;
+        max-width: 600px;
+        margin-bottom: 100px;
       }
     }
   }
