--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@
 @import "./pages/discover";
 @import "./pages/nft-ranking";
 @import "./pages/my-nft";
+@import "./pages/setting";
 @import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
 
 @font-face {
