feat: wallet connect

--- a/src/styles/configs/_chakra-custom.scss
+++ b/src/styles/configs/_chakra-custom.scss
@@ -60,11 +60,22 @@
 }
 
 .chakra-menu__menu-list {
+  position: relative;
   background: linear-gradient(
     121.07deg,
     rgba(255, 255, 255, 0.3) -26.88%,
     rgba(255, 255, 255, 0.2) 73.85%
   ) !important;
+  overflow: hidden;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 0;
+    right: 0;
+    background: url(/common/menu-corner.png);
+  }
   @include blurBack(20px);
 }
 
