--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -13,6 +13,7 @@
     z-index: 99;
     .header-container {
       @include container;
+      padding: 10px 0;
       height: 120px;
       margin: 0 20px;
       display: flex;
@@ -26,7 +27,7 @@
         align-items: center;
         animation: slideInLeft 0.5s;
         .logo {
-          height: 60%;
+          height: 100%;
           object-fit: contain;
           cursor: pointer;
         }
@@ -41,25 +42,13 @@
               font-size: 13px;
             }
           }
-          .nav-list {
-            position: relative;
-            overflow: hidden;
-            &::after {
-              content: "";
-              position: absolute;
-              width: 30px;
-              height: 30px;
-              top: 0;
-              right: 0;
-              background: url(/common/menu-corner.png);
-            }
-          }
           @include to(md) {
             display: none;
           }
         }
       }
       .nav-right {
+        width: 45%;
         height: 100%;
         display: flex;
         align-items: center;
@@ -86,14 +75,35 @@
         .noti-button {
           margin-left: 20px;
           font-size: 40px;
-          transition: 0.2s;
           cursor: pointer;
         }
         .user {
           font-size: 50px;
           margin-left: 20px;
           cursor: pointer;
-          transition: 0.2s;
+        }
+        .signed-user {
+          background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+          padding: 2px;
+          width: 50px;
+          height: 50px;
+          min-width: 50px;
+          margin-left: 20px;
+          border-radius: 100%;
+          cursor: pointer;
+          border-radius: 100%;
+          position: relative;
+          .user-container {
+            width: 100%;
+            height: 100%;
+            border-radius: 100%;
+            overflow: hidden;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
         }
         .menu-button {
           margin-left: 20px;
@@ -127,7 +137,7 @@
         flex-direction: column;
       }
       .footer-logo {
-        height: 100px;
+        height: 200px;
         object-fit: contain;
         margin-right: 25px;
       }
