--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,6 @@
 @import "./components/app-layout";
 @import "./components/app-empty";
 @import "./components/pageSpinner";
-@import "./components/user-tray";
 @import "./components/listing";
 @import "./components/launchpad-item";
 @import "./components/collection-item";
@@ -19,6 +18,7 @@
 @import "./components/nft-search";
 @import "./components/sort";
 @import "./components/app-alert";
+@import "./components/web3-modal";
 @import "./pages/error-page";
 @import "./pages/home";
 @import "./pages/nft-details";
