--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -25,11 +25,20 @@
         border-radius: 16px;
         margin-bottom: 30px;
         overflow: hidden;
+        position: relative;
         img {
           height: 100%;
           width: 100%;
           object-fit: cover;
           border-radius: 16px;
+        }
+        .heart {
+          position: absolute;
+          top: 30px;
+          right: 27px;
+          width: 40px;
+          height: 30px;
+          cursor: pointer;
         }
       }
       .nft-description {
