--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -116,16 +116,16 @@
     }
     .offering-make {
       margin-top: 40px;
-      .item{
+      .item {
         display: flex;
         align-items: center;
-        img{
+        img {
           width: 50px;
           margin-right: 17px;
         }
-        div{
-          p{
-            img{
+        div {
+          p {
+            img {
               display: inline-block;
               width: 10px;
               margin-left: 7px;
@@ -135,8 +135,11 @@
       }
       .button {
         button {
-          border: 1px solid linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
-          padding: 3px 25px;
+          width: 100px;
+          height: 32px;
+          border: solid 1px transparent !important;
+          background-image: linear-gradient(300deg, #78e4ff, #ff48fa);
+          box-shadow: 2px 1000px 1px #353571 inset !important;
           border-radius: 8px;
         }
       }
@@ -197,7 +200,7 @@
             line-height: 28px;
             text-align: center;
             text-transform: uppercase;
-            color: #0BEBD6;
+            color: #0bebd6;
             width: auto;
           }
         }
@@ -211,7 +214,6 @@
           margin-top: 35px;
           table {
             thead {
-
             }
             tbody {
               tr {
@@ -221,7 +223,7 @@
                     .animverse {
                       display: flex;
                       align-items: center;
-                      color: #0BEBD6;
+                      color: #0bebd6;
                       svg {
                         height: 15px;
                         margin-left: 5px;
@@ -234,19 +236,27 @@
                     font-size: 16px;
                     line-height: 25px;
                     text-align: justify;
-                    color: #FFFFFF;
+                    color: #ffffff;
 
                     &.accept {
-                      background: linear-gradient(99.92deg, #CD28E8 0%, #0BEBD6 100%);
+                      background: linear-gradient(
+                        99.92deg,
+                        #cd28e8 0%,
+                        #0bebd6 100%
+                      );
                       border-radius: 8px;
                       margin-right: 8px;
                     }
                     &.cancel {
                       border-radius: 8px;
-                      border: solid 1px transparent!important;
-                      background-image: linear-gradient(300deg, #78e4ff, #ff48fa);
+                      border: solid 1px transparent !important;
+                      background-image: linear-gradient(
+                        300deg,
+                        #78e4ff,
+                        #ff48fa
+                      );
                       background-origin: border-box;
-                      box-shadow: 2px 1000px 1px #353571 inset!important;
+                      box-shadow: 2px 1000px 1px #353571 inset !important;
                       &:focus {
                       }
                     }
@@ -297,7 +307,13 @@
   align-items: center;
 }
 .dialog-confirm {
-  background: linear-gradient(126.08deg, rgba(255, 255, 255, 0.3) 13.84%, rgba(255, 255, 255, 0.2) 74.14%)!important;
+  margin-top: 50vh !important;
+  transform: translateY(-50%) !important;
+  background: linear-gradient(
+    126.08deg,
+    rgba(255, 255, 255, 0.3) 13.84%,
+    rgba(255, 255, 255, 0.2) 74.14%
+  ) !important;
   box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.2) !important;
   backdrop-filter: blur(40px);
   border-radius: 10px !important;
@@ -305,7 +321,7 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 38px;
-    color: #FFFFFF;
+    color: #ffffff;
     &::after {
       border-bottom: 1px solid rgba(147, 147, 147, 0.5);
       content: "";
@@ -317,13 +333,13 @@
   footer {
     justify-content: center;
     button {
-      background: linear-gradient(99.92deg, #CD28E8 0%, #0BEBD6 100%);
+      background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
       border-radius: 8px;
       font-weight: 600;
       font-size: 20px;
       line-height: 38px;
       text-align: center;
-      color: #FFFFFF;
+      color: #ffffff;
       width: 130px;
       height: 40px;
     }
