--- a/src/styles/components/_collection-item.scss
+++ b/src/styles/components/_collection-item.scss
@@ -22,6 +22,9 @@
     padding: 2px;
     border-radius: 100%;
     margin-right: 25px;
+    @include to(xs) {
+      margin-right: 10px;
+    }
     .image-content {
       height: 100%;
       width: 100%;
@@ -37,7 +40,7 @@
     }
   }
   span {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 700;
     white-space: nowrap;
     overflow: hidden;
