--- a/src/styles/components/_launchpad-item.scss
+++ b/src/styles/components/_launchpad-item.scss
@@ -11,7 +11,6 @@
   height: fit-content;
   width: 100%;
   border-radius: 16px;
-  box-shadow: 0px 0px 10px #68fff1;
   overflow: hidden;
   cursor: pointer;
   &:hover {
@@ -20,15 +19,23 @@
     }
   }
   .launchpad-image {
-    border-radius: 16px 16px 0 0;
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+    padding: 2px;
+    border-radius: 16px;
     width: 100%;
     height: 200px;
     overflow: hidden;
-    img {
-      object-fit: cover;
+    .image-wrapper {
       width: 100%;
       height: 100%;
-      transition: 0.5s;
+      border-radius: 15px;
+      overflow: hidden;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        transition: 0.5s;
+      }
     }
   }
   .on-going {
