--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -76,6 +76,7 @@
           margin-left: 20px;
           font-size: 40px;
           cursor: pointer;
+          animation: fadein 0.1s;
         }
         .user {
           font-size: 50px;
@@ -93,6 +94,7 @@
           cursor: pointer;
           border-radius: 100%;
           position: relative;
+          animation: fadein 0.5s;
           .user-container {
             width: 100%;
             height: 100%;
