--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -126,6 +126,7 @@
             button {
               background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
               margin-bottom: 10px;
+              min-width: 160px;
             }
             span {
               font-size: 14px;
