--- a/src/styles/components/_auction-item.scss
+++ b/src/styles/components/_auction-item.scss
@@ -49,6 +49,7 @@
       align-items: center;
       font-weight: 300;
       font-size: 14px;
+      height: 16px;
       span {
         font-weight: 700;
         margin-right: 1em;
