update: listing to listing bar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,7 @@
 @import "./components/app-layout";
 @import "./components/app-empty";
 @import "./components/pageSpinner";
-@import "./components/listing";
+@import "./components/listing-bar";
 @import "./components/launchpad-item";
 @import "./components/collection-item";
 @import "./components/ranking-list";
