--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -7,7 +7,7 @@
     font-family: SVN-Transformer;
     font-size: 72px;
     line-height: 72px;
-    margin: 30px 0;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     svg {
@@ -29,9 +29,9 @@
   .collection-stats {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-gap: 40px;
-    margin: 40px 0;
-    @include to(1380px) {
+    grid-gap: 20px;
+    margin: 20px 0;
+    @include to(1230px) {
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 20px 80px;
     }
@@ -44,7 +44,7 @@
     }
     .stat {
       width: 180px;
-      height: 129px;
+      height: 80px;
       background: linear-gradient(
         152.97deg,
         rgba(255, 255, 255, 0.2) 0%,
@@ -57,26 +57,27 @@
       align-items: center;
       justify-content: center;
       .stat-key {
-        font-size: 24px;
+        font-size: 16px;
         font-weight: 500;
         color: $light-cyan;
       }
       .stat-value {
-        font-size: 36px;
+        font-size: 24px;
         font-weight: 600;
       }
     }
   }
   .collection-description {
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 500;
     text-align: center;
     max-width: 976px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
-    line-clamp: 3;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
     -webkit-box-orient: vertical;
     transition: 0.5s;
     animation: collapse 1s linear;
@@ -86,7 +87,7 @@
     }
   }
   .expand-button {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-size: 30px;
   }
   .expanded {
