fix: improve collection details

--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -164,6 +164,7 @@
           svg {
             color: $cyan;
             margin-left: 10px;
+            cursor: pointer;
           }
         }
       }
