--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -30,7 +30,7 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-gap: 20px;
-    margin: 20px 0;
+    margin: 40px 0;
     @include to(1230px) {
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 20px 80px;
@@ -44,7 +44,7 @@
     }
     .stat {
       width: 180px;
-      height: 80px;
+      height: 100px;
       background: linear-gradient(
         152.97deg,
         rgba(255, 255, 255, 0.2) 0%,
@@ -57,12 +57,12 @@
       align-items: center;
       justify-content: center;
       .stat-key {
-        font-size: 16px;
+        font-size: 24px;
         font-weight: 500;
         color: $light-cyan;
       }
       .stat-value {
-        font-size: 24px;
+        font-size: 36px;
         font-weight: 600;
       }
     }
@@ -87,7 +87,8 @@
     }
   }
   .expand-button {
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 30px;
     font-size: 30px;
   }
   .expanded {
@@ -99,8 +100,10 @@
   }
   .collection-banner {
     width: 100%;
-    object-fit: contain;
+    aspect-ratio: 9/3;
+    object-fit: cover;
     margin-bottom: 60px;
+    border-radius: 16px;
   }
   .listing {
     margin-bottom: 40px;
