--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -369,4 +369,57 @@
       height: 40px;
     }
   }
+  .form-buy {
+    display: flex;
+    justify-content: space-between;
+    p {
+      &.label-price {
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 28px;
+        color: #FFFFFF;
+      }
+      &.price {
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 115%;
+        text-align: right;
+        color: #0BEBD6;
+        p {
+          font-size: 20px;
+          line-height: 31px;
+          text-align: right;
+          color: #FFFFFF;
+          font-weight: normal;
+        }
+      }
+    }
+  }
+  &.dialog-alert {
+    header {
+      &::after {
+        border-bottom: none;
+      }
+    }
+    .alert-content {
+      text-align: center;
+      img {
+        margin: auto;
+      }
+      .title {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 38px;
+        color: #FFFFFF;
+      }
+      .desc {
+        font-size: 16px;
+        line-height: 22px;
+        color: #FFFFFF;
+      }
+    }
+    button {
+      margin-right: 0;
+    }
+  }
 }
