--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,7 +9,7 @@
 @import "./components/launchpad-item";
 @import "./components/collection-item";
 @import "./components/ranking-list";
-@import "./components/auction-item";
+@import "./components/nft-item";
 @import "./components/getting-started-item";
 @import "./components/app-table";
 @import "./components/app-select";
