--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -84,6 +84,24 @@
           margin-left: 20px;
           cursor: pointer;
         }
+        .spinner {
+          width: 50px;
+          height: 50px;
+          position: relative;
+          margin-left: 20px;
+          .user {
+            margin-left: 0;
+          }
+          .cancel-btn {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            font-size: 12px;
+            border-radius: 100%;
+          }
+        }
         .signed-user {
           background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
           padding: 2px;
