--- a/src/styles/components/_app-select.scss
+++ b/src/styles/components/_app-select.scss
@@ -7,6 +7,7 @@
     text-align: left;
     font-size: 18px;
     font-weight: 500;
+    min-width: 200px;
     cursor: pointer;
     * {
       color: white;
@@ -29,6 +30,7 @@
       rgba(255, 255, 255, 0.3) -26.88%,
       rgba(255, 255, 255, 0.2) 73.85%
     );
+    white-space: nowrap;
     @include blurBack(20px);
     overflow: hidden;
     &::after {
