fix: table render functions

--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -1,7 +1,7 @@
 .app-layout {
   background: url(/common/background.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   .header {
     background: #180f5c;
