fix: build errors

--- a/src/styles/pages/_my-nft.scss
+++ b/src/styles/pages/_my-nft.scss
@@ -377,19 +377,19 @@
         font-weight: normal;
         font-size: 18px;
         line-height: 28px;
-        color: #FFFFFF;
+        color: #ffffff;
       }
       &.price {
         font-weight: 600;
         font-size: 36px;
         line-height: 115%;
         text-align: right;
-        color: #0BEBD6;
+        color: #0bebd6;
         p {
           font-size: 20px;
           line-height: 31px;
           text-align: right;
-          color: #FFFFFF;
+          color: #ffffff;
           font-weight: normal;
         }
       }
@@ -410,12 +410,12 @@
         font-weight: 500;
         font-size: 24px;
         line-height: 38px;
-        color: #FFFFFF;
+        color: #ffffff;
       }
       .desc {
         font-size: 16px;
         line-height: 22px;
-        color: #FFFFFF;
+        color: #ffffff;
       }
     }
     button {
