--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -183,7 +183,7 @@
         justify-content: space-between;
         margin: 40px 0;
         button {
-          background: linear-gradient(99.92deg, #CD28E8 0%, #0BEBD6 100%);
+          background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
           border-radius: 8px;
           min-width: 190px;
         }
@@ -226,5 +226,4 @@
   }
 }
 .fixed-price {
-  
 }
