--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -39,6 +39,20 @@
           width: 40px;
           height: 30px;
           cursor: pointer;
+          &:hover {
+            stroke: $purple1;
+          }
+          &:active {
+            fill: $purple1;
+          }
+        }
+        .heart-liked {
+          stroke: $purple1;
+          fill: $purple1;
+          &:active {
+            stroke: white;
+            fill: transparent;
+          }
         }
       }
       .nft-description {
