--- a/src/styles/pages/_activities.scss
+++ b/src/styles/pages/_activities.scss
@@ -100,9 +100,11 @@
     }
 
     .select-list {
-      background: linear-gradient(126.08deg,
-          rgba(255, 255, 255, 0.3) 13.84%,
-          rgba(255, 255, 255, 0.1) 74.14%);
+      background: linear-gradient(
+        126.08deg,
+        rgba(255, 255, 255, 0.3) 13.84%,
+        rgba(255, 255, 255, 0.1) 74.14%
+      );
       box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
       backdrop-filter: blur(40px);
 
