--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -175,7 +175,7 @@
         font-size: 20px;
         line-height: 31px;
         text-transform: uppercase;
-        color: #FFFFFF;
+        color: #ffffff;
       }
       .details-stats {
         position: relative;
@@ -275,14 +275,14 @@
       font-weight: 500;
       font-size: 24px;
       line-height: 38px;
-      color: #FFFFFF;
+      color: #ffffff;
       .animverse {
         display: flex;
         align-items: center;
         font-weight: 500;
         font-size: 16px;
         line-height: 25px;
-        color: #0BEBD6;
+        color: #0bebd6;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         img {
           margin-left: 7px;
@@ -293,12 +293,12 @@
   .price {
     font-size: 18px;
     line-height: 28px;
-    color: #FFFFFF;
+    color: #ffffff;
   }
   p {
     font-size: 16px;
     line-height: 22px;
-    color: #FFFFFF;
+    color: #ffffff;
   }
   .convert {
     margin-bottom: 10px;
@@ -310,7 +310,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 31px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin-bottom: 3px;
   }
   .desc-fees {
@@ -330,7 +330,7 @@
     }
   }
   .card-price {
-    border: 1px solid #D7D7D7;
+    border: 1px solid #d7d7d7;
     box-sizing: border-box;
     border-radius: 8px;
     padding: 12px 16px;
