style: fix banners style

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -23,6 +23,7 @@
           overflow: hidden;
           .banner-image {
             height: 100%;
+            width: 100%;
             cursor: pointer;
             transition: 0.5s;
             transform: scale(1.1);
