Style Page Nft Rangking

--- a/src/styles/components/_ranking-list.scss
+++ b/src/styles/components/_ranking-list.scss
@@ -5,6 +5,7 @@
     line-height: 82px;
     font-weight: 700;
     font-family: SVN-Transformer;
+    margin-top: 30px;
   }
   .nft-search {
     margin-top: -10px;
@@ -13,7 +14,7 @@
     align-items: center;
   }
   .chakra-table {
-    margin-top: 38px;
+    // margin-top: 38px;
     tbody {
       tr {
         .collection {
