--- a/src/styles/components/_nft-item.scss
+++ b/src/styles/components/_nft-item.scss
@@ -13,10 +13,12 @@
   cursor: pointer;
   .nft-image {
     width: 100%;
-    height: 50%;
+    height: 170px;
     overflow: hidden;
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       transition: 0.5s;
     }
   }
