--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -64,7 +64,7 @@
     .details-content {
       width: 100%;
       height: 100%;
-      .provider {
+      .collection {
         display: flex;
         align-items: center;
         img {
@@ -166,6 +166,16 @@
           }
         }
       }
+      .buy-tray-owner {
+        display: flex;
+        justify-content: space-between;
+        margin: 40px 0;
+        button {
+          background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+          border-radius: 8px;
+          min-width: 190px;
+        }
+      }
       .auction-end {
         margin-top: -20px;
         margin-bottom: 20px;
@@ -216,16 +226,6 @@
               }
             }
           }
-        }
-      }
-      .buy-tray-owner {
-        display: flex;
-        justify-content: space-between;
-        margin: 40px 0;
-        button {
-          background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
-          border-radius: 8px;
-          min-width: 190px;
         }
       }
     }
@@ -342,5 +342,51 @@
         border-radius: 8px;
       }
     }
+  }
+}
+
+.buy-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .price {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    .price-col {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      h1 {
+        font-size: 36px;
+        font-weight: 600;
+        line-height: 36px;
+        color: $cyan;
+      }
+    }
+  }
+  button,
+  button:hover {
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+    margin-bottom: 20px;
+  }
+}
+
+.result-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h1 {
+    font-size: 24px;
+    font-weight: 500;
+  }
+  p {
+    font-size: 16px;
+  }
+  button,
+  button:hover {
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+    margin-bottom: 20px;
   }
 }
