--- a/src/styles/configs/_chakra-custom.scss
+++ b/src/styles/configs/_chakra-custom.scss
@@ -1,6 +1,13 @@
 .chakra-modal__overlay {
   @include blurBack(10px);
 }
+.chakra-modal__content {
+  background: linear-gradient(
+    126.08deg,
+    rgba(255, 255, 255, 0.3) 13.84%,
+    rgba(255, 255, 255, 0.2) 74.14%
+  ) !important;
+}
 
 .chakra-tabs {
   padding: 20px 0;
