--- a/src/styles/pages/_nft-details.scss
+++ b/src/styles/pages/_nft-details.scss
@@ -166,6 +166,70 @@
           }
         }
       }
+      .auc-tray {
+        box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4);
+        border-radius: 16px;
+        padding: 2px;
+        margin: 20px 0;
+        background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+        .auc-tray-body {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          background: $dark-purple;
+          border-radius: 16px;
+          padding: 15px;
+          .price {
+            display: flex;
+            flex-direction: column;
+            span:not(:first-child, :last-child) {
+              font-size: 18px;
+              font-weight: 400;
+            }
+            span:nth-child(2) {
+              font-size: 40px;
+              font-weight: 700;
+              line-height: 40px;
+              color: $cyan;
+              transition: 0.1s;
+              @include to(xs) {
+                font-size: 20px;
+                line-height: 20px;
+              }
+            }
+          }
+          .auc-nav {
+            display: flex;
+            flex-direction: column;
+            button {
+              background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+              margin-bottom: 10px;
+              min-width: 160px;
+            }
+            span {
+              font-size: 14px;
+              color: $cyan;
+              text-decoration: underline;
+              cursor: pointer;
+            }
+            &.flex-row {
+              flex-direction: row;
+              button {
+                min-width: auto;
+                &:first-child {
+                  margin-right: 10px;
+                }
+                &:last-child {
+                  border: solid 1px transparent !important;
+                  background-image: linear-gradient(300deg, #78e4ff, #ff48fa);
+                  background-origin: border-box;
+                  box-shadow: 2px 1000px 1px #030348 inset !important;
+                }
+              }
+            }
+          }
+        }
+      }
       .buy-tray-owner {
         display: flex;
         justify-content: space-between;
@@ -357,7 +421,7 @@
     .price-col {
       display: flex;
       flex-direction: column;
-      align-items: end;
+      align-items: flex-end;
       h1 {
         font-size: 36px;
         font-weight: 600;
@@ -368,6 +432,24 @@
   }
   button,
   button:hover {
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+    margin-bottom: 20px;
+  }
+}
+
+.auc-modal {
+  display: flex;
+  flex-direction: column;
+  .chakra-numberinput {
+    width: 100%;
+  }
+  p {
+    margin-bottom: 20px;
+    font-size: 14px;
+  }
+  button,
+  button:hover {
+    align-self: center;
     background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
     margin-bottom: 20px;
   }
