Bug fix NFT Ranking & Activities

--- a/src/styles/components/_ranking-list.scss
+++ b/src/styles/components/_ranking-list.scss
@@ -21,9 +21,11 @@
           display: flex;
           align-items: center;
           color: #0bebd6;
+          cursor: pointer;
           img {
             width: 56px;
             height: 56px;
+            border-radius: 50%;
           }
           span {
             margin-left: 10px;
