--- a/src/styles/pages/_activities.scss
+++ b/src/styles/pages/_activities.scss
@@ -59,6 +59,9 @@
       img {
         margin-right: 15px;
       }
+      span {
+        cursor: pointer;
+      }
     }
     .date {
       cursor: pointer;
