--- a/src/styles/components/_nft-item.scss
+++ b/src/styles/components/_nft-item.scss
@@ -15,11 +15,24 @@
     width: 100%;
     height: 170px;
     overflow: hidden;
+    position: relative;
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       transition: 0.5s;
+    }
+    .nft-network {
+      position: absolute;
+      top: 10px;
+      right: 8px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      padding: 4px;
+      img {
+        width: 16px;
+        height: 16px;
+      }
     }
   }
   .nft-body {
